--- a/app/src/main/res/layout/fragment_flask_creator.xml
+++ b/app/src/main/res/layout/fragment_flask_creator.xml
@@ -66,6 +66,30 @@
                         android:hint="@string/flask_trade" />
                 </com.google.android.material.textfield.TextInputLayout>
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/TiLayout8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:boxStrokeColor="@color/colorPrimary"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginBottom="8dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editTextInsertEmptyWeight"
+                        android:layout_width="match_parent"
+                        android:inputType="number"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginRight="4dp"
+                        android:layout_marginBottom="4dp"
+                        android:hint="@string/emptyWeight" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -98,28 +122,6 @@
                     android:layout_marginBottom="10dp">
 
                     <TextView
-                        android:id="@+id/LabelEmptyWeightFlask"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="18dp"
-                        android:text="@string/emptyWeight" />
-
-                    <Spinner
-                        android:id="@+id/spinnerEmptyWeightFlask"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp">
-
-                    <TextView
                         android:id="@+id/LabelContentWeightFlask"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -130,6 +132,12 @@
                         android:id="@+id/spinnerContentWeightFlask"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="18dp"
+                        android:text="@string/grams"/>
                 </LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -228,30 +236,6 @@
 
                     <TextView
                         android:id="@+id/LabelDateLastRevision"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="18dp"
-                        android:hint="@string/exeDate" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp">
-
-                    <Button
-                        android:id="@+id/buttonDateNextRevisionFlask"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="20dp"
-                        android:hint="@string/NextRevision"/>
-
-                    <TextView
-                        android:id="@+id/LabelDateNextRevision"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="18dp"
