--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -5,13 +5,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:background="@mipmap/fondo_alarma"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/buttonEdificios"
-            android:layout_width="match_parent"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="500dp"
             android:text="@string/edificios" />
     </LinearLayout>
 </layout>
