--- a/app/src/main/res/layout/dialog_building_insert.xml
+++ b/app/src/main/res/layout/dialog_building_insert.xml
@@ -40,16 +40,20 @@
                 <Button
                     android:id="@+id/buttonCancelInsertBuilding"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/Base.Widget.AppCompat.Button.Colored"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/redondeado"
                     android:layout_weight="1"
+                    android:textColor="@color/white"
                     android:text="@string/cancel" />
 
                 <Button
                     android:id="@+id/buttonSubmitInsertBuilding"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/Base.Widget.AppCompat.Button.Colored"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/redondeado"
+                    android:textColor="@color/white"
                     android:layout_weight="1"
                     android:text="@string/submit" />
             </LinearLayout>
