--- a/app/src/main/res/layout/dialog_floor_insert.xml
+++ b/app/src/main/res/layout/dialog_floor_insert.xml
@@ -53,17 +53,21 @@
                 <Button
                     android:id="@+id/buttonCancelInsertFloor"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/Base.Widget.AppCompat.Button.Colored"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/redondeado"
                     android:layout_weight="1"
+                    android:textColor="@color/white"
                     android:text="@string/cancel" />
 
                 <Button
                     android:id="@+id/buttonSubmitInsertFloor"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/Base.Widget.AppCompat.Button.Colored"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/redondeado"
                     android:layout_weight="1"
+                    android:textColor="@color/white"
                     android:text="@string/submit" />
             </LinearLayout>
         </LinearLayout>
