--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -9,7 +9,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".about.AboutFragment">
+        tools:context=".about.AboutFragment"
+        android:background="@color/LightGray">
 
 
         <TextView
