--- a/app/src/main/res/layout/fragment_building.xml
+++ b/app/src/main/res/layout/fragment_building.xml
@@ -11,7 +11,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/LightGray">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -22,7 +23,7 @@
                 android:id="@+id/buildingList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_weight="1">
 
             </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
@@ -36,6 +37,7 @@
             android:layout_gravity="bottom|right"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
+            app:backgroundTint="@color/colorPrimary"
             app:srcCompat="@drawable/ic_add_black_24dp" />
     </FrameLayout>
 </layout>
