--- a/app/src/main/res/layout/fragment_extinguisher.xml
+++ b/app/src/main/res/layout/fragment_extinguisher.xml
@@ -12,7 +12,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/LightGray">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -37,6 +38,7 @@
             android:layout_gravity="bottom|right"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
+            app:backgroundTint="@color/colorPrimary"
             app:srcCompat="@drawable/ic_add_black_24dp" />
     </FrameLayout>
 </layout>
