--- a/app/src/main/res/layout/fragment_extinguisher_creator.xml
+++ b/app/src/main/res/layout/fragment_extinguisher_creator.xml
@@ -62,7 +62,7 @@
                     android:layout_marginBottom="10dp"
                     android:inputType="textPersonName"
                     android:ems="10"
-                    android:hint="Extinguisher TradeMark" />
+                    android:hint="@string/extinguisher_trademark" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -141,7 +141,8 @@
                     android:layout_marginBottom="10dp"
                     android:inputType="text"
                     android:ems="10"
-                    android:hint="@string/ext_sit" />
+                    android:hint="@string/ext_sit"
+                    android:textColorHint="@color/white"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
