--- a/app/src/main/res/layout/fragment_tab.xml
+++ b/app/src/main/res/layout/fragment_tab.xml
@@ -15,6 +15,8 @@
             android:id="@+id/appbartabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/StrongGray"
+            app:tabTextColor="@color/white"
             app:tabMode="fixed">
 
         </com.google.android.material.tabs.TabLayout>
