--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -1,19 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@mipmap/fondo_alarma"
+        android:background="@mipmap/fondo_head_ext"
         android:gravity="center"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/buttonEdificios"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="500dp"
-            android:text="@string/edificios" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="380dp"
+            android:background="#90FFFFFF"
+            android:orientation="vertical"
+            android:bottomRightRadius="8dp"
+            android:bottomLeftRadius="8dp"
+            android:topRightRadius="8dp"
+            android:topLeftRadius="8dp">
+
+            <TextView
+                android:id="@+id/textView3"
+                style="bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:textColor="@color/Black"
+                android:text="@string/app_name"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+
+            <Button
+                android:id="@+id/buttonEdificios"
+                android:layout_width="120dp"
+                android:background="@drawable/redondeado"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:text="@string/Buildings" />
+
+
+        </LinearLayout>
     </LinearLayout>
 </layout>
