--- a/app/src/main/res/layout/recycler_building_layout.xml
+++ b/app/src/main/res/layout/recycler_building_layout.xml
@@ -33,7 +33,7 @@
             android:id="@+id/toolbarBuilding"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="?attr/colorPrimary"
+            android:background="@color/Black"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme" />
 
