--- a/app/src/main/res/menu/overflow_menu.xml
+++ b/app/src/main/res/menu/overflow_menu.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/aboutFragment2"
-        android:icon="@drawable/ic_about"
+        android:icon="@drawable/ic_error_outline_white_24dp"
         android:title="@string/about"
         app:showAsAction="ifRoom" />
 
