--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="colorPrimary">#FF5656</color>
-    <color name="colorPrimaryDark">#ff0000</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#ff1c1c</color>
+    <color name="colorPrimaryDark">#2a2a2a</color>
+    <color name="colorAccent">#737272</color>
+    <color name="Black">#2a2a2a</color>
+    <color name="LightGray">#adadad</color>
+    <color name="StrongGray">#494949</color>
+    <color name="LightRed">#df7f7f</color>
+    <color name="white">#ffffff</color>
 </resources>
