--- a/app/src/main/res/layout/fragment_flask_creator.xml
+++ b/app/src/main/res/layout/fragment_flask_creator.xml
@@ -238,12 +238,15 @@
                         android:id="@+id/buttonDateLastRevisionFlask"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textStyle="bold"
+
                         android:layout_marginRight="20dp"
                         android:hint="@string/LastRevision"/>
 
                     <TextView
                         android:id="@+id/LabelDateLastRevision"
                         android:layout_width="wrap_content"
+                        android:textStyle="bold"
                         android:layout_height="wrap_content"
                         android:textSize="18dp"
                         android:hint="@string/exeDate" />
