--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -12,10 +12,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="170dp"
+            android:layout_height="250dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="380dp"
+            android:layout_marginBottom="330dp"
             android:background="#90FFFFFF"
             android:orientation="vertical"
             android:bottomRightRadius="8dp"
@@ -35,15 +35,36 @@
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/welcome_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/text_padding"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="invisible"/>
 
             <Button
-                android:id="@+id/buttonEdificios"
+                android:id="@+id/buttonLogin"
                 android:layout_width="120dp"
                 android:background="@drawable/redondeado"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="30dp"
-                android:text="@string/Buildings" />
+                android:text="@string/Login" />
+
+            <Button
+                android:id="@+id/buttonSinConexion"
+                android:layout_width="120dp"
+                android:background="@drawable/redondeado"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:text="@string/ModoSinConexion" />
 
 
         </LinearLayout>
